// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/lib/testUtils createTestCoub should create test coub given id 1`] = `
{
  "file_versions": {
    "html5": {
      "audio": {},
      "video": {},
    },
  },
  "likes_count": 1,
  "media_blocks": {
    "external_raw_videos": [],
  },
  "permalink": "testID",
  "picture": "testID.jpg",
  "title": "Title: testID",
  "views_count": 1,
}
`;

exports[`src/lib/testUtils createTestCoub should create test coub given id and override 1`] = `
{
  "file_versions": {
    "html5": {
      "audio": {},
      "video": {
        "high": {
          "size": 5,
          "url": "high",
        },
      },
    },
  },
  "likes_count": 1,
  "media_blocks": {
    "external_raw_videos": [],
  },
  "permalink": "testID",
  "picture": "testID.jpg",
  "test": "value",
  "title": "Title: testID",
  "views_count": 1,
}
`;
